--- a/docs/core/migration/20-21.md
+++ b/docs/core/migration/20-21.md
@@ -3,47 +3,47 @@ title: .NET Core 2.0에서 2.1로 마이그레이션
 description: .NET Core 2.0 앱을 2.1로 업그레이드하는 방법을 알아봅니다.
 ms.date: 08/06/2018
 ms.custom: seodec18
-ms.openlocfilehash: 49afbf8f873ec8b5be8ec2aff0bdc074f5b0b86f
-ms.sourcegitcommit: e6ad58812807937b03f5c581a219dcd7d1726b1d
+ms.openlocfilehash: ae5d5c8605b1b99427e49a98ce5b57519c3bd95d
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/10/2018
-ms.locfileid: "53169308"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54623380"
 ---
-# <a name="migrate-from-net-core-20-to-21"></a><span data-ttu-id="80a09-103">.NET Core 2.0에서 2.1로 마이그레이션</span><span class="sxs-lookup"><span data-stu-id="80a09-103">Migrate from .NET Core 2.0 to 2.1</span></span>
+# <a name="migrate-from-net-core-20-to-21"></a><span data-ttu-id="84566-103">.NET Core 2.0에서 2.1로 마이그레이션</span><span class="sxs-lookup"><span data-stu-id="84566-103">Migrate from .NET Core 2.0 to 2.1</span></span>
 
-<span data-ttu-id="80a09-104">이 문서에서는 .NET Core 2.0 앱을 2.1로 마이그레이션하는 기본 단계를 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-104">This article shows you the basic steps for migrating your .NET Core 2.0 app to 2.1.</span></span> <span data-ttu-id="80a09-105">ASP.NET Core 앱을 2.1로 마이그레이션하려는 경우 [ASP.NET Core 2.0에서 2.1로 마이그레이션](/aspnet/core/migration/20_21)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="80a09-105">If you're looking to migrate your ASP.NET Core app to 2.1, see [Migrate from ASP.NET Core 2.0 to 2.1](/aspnet/core/migration/20_21).</span></span>
+<span data-ttu-id="84566-104">이 문서에서는 .NET Core 2.0 앱을 2.1로 마이그레이션하는 기본 단계를 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="84566-104">This article shows you the basic steps for migrating your .NET Core 2.0 app to 2.1.</span></span> <span data-ttu-id="84566-105">ASP.NET Core 앱을 2.1로 마이그레이션하려는 경우 [ASP.NET Core 2.0에서 2.1로 마이그레이션](/aspnet/core/migration/20_21)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="84566-105">If you're looking to migrate your ASP.NET Core app to 2.1, see [Migrate from ASP.NET Core 2.0 to 2.1](/aspnet/core/migration/20_21).</span></span>
 
-<span data-ttu-id="80a09-106">.NET Core 2.1의 새로운 기능에 대한 개요는 [.NET Core 2.1의 새로운 기능](../whats-new/dotnet-core-2-1.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="80a09-106">For an overview of the new features in .NET Core 2.1, see [What's new in .NET Core 2.1](../whats-new/dotnet-core-2-1.md).</span></span>
+<span data-ttu-id="84566-106">.NET Core 2.1의 새로운 기능에 대한 개요는 [.NET Core 2.1의 새로운 기능](../whats-new/dotnet-core-2-1.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="84566-106">For an overview of the new features in .NET Core 2.1, see [What's new in .NET Core 2.1](../whats-new/dotnet-core-2-1.md).</span></span>
 
-## <a name="update-the-project-file-to-use-21-versions"></a><span data-ttu-id="80a09-107">2.1 버전을 사용하도록 프로젝트 파일 업데이트</span><span class="sxs-lookup"><span data-stu-id="80a09-107">Update the project file to use 2.1 versions</span></span>
+## <a name="update-the-project-file-to-use-21-versions"></a><span data-ttu-id="84566-107">2.1 버전을 사용하도록 프로젝트 파일 업데이트</span><span class="sxs-lookup"><span data-stu-id="84566-107">Update the project file to use 2.1 versions</span></span>
 
-* <span data-ttu-id="80a09-108">프로젝트 파일(\*.csproj, \*.vbproj 또는 \*.fsproj 파일)을 엽니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-108">Open the project file (the \*.csproj, \*.vbproj, or \*.fsproj file).</span></span>
+* <span data-ttu-id="84566-108">프로젝트 파일(\*.csproj, \*.vbproj 또는 \*.fsproj 파일)을 엽니다.</span><span class="sxs-lookup"><span data-stu-id="84566-108">Open the project file (the \*.csproj, \*.vbproj, or \*.fsproj file).</span></span>
 
-* <span data-ttu-id="80a09-109">[대상 프레임워크](../../standard/frameworks.md) 값을 `netcoreapp2.0`에서 `netcoreapp2.1`로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-109">Change the [target framework](../../standard/frameworks.md) value from `netcoreapp2.0` to `netcoreapp2.1`.</span></span> <span data-ttu-id="80a09-110">대상 프레임워크는 `<TargetFramework>` 또는 `<TargetFrameworks>` 요소로 정의됩니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-110">The target framework is defined by the `<TargetFramework>` or `<TargetFrameworks>` element.</span></span>
+* <span data-ttu-id="84566-109">[대상 프레임워크](../../standard/frameworks.md) 값을 `netcoreapp2.0`에서 `netcoreapp2.1`로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="84566-109">Change the [target framework](../../standard/frameworks.md) value from `netcoreapp2.0` to `netcoreapp2.1`.</span></span> <span data-ttu-id="84566-110">대상 프레임워크는 `<TargetFramework>` 또는 `<TargetFrameworks>` 요소로 정의됩니다.</span><span class="sxs-lookup"><span data-stu-id="84566-110">The target framework is defined by the `<TargetFramework>` or `<TargetFrameworks>` element.</span></span>
 
-  <span data-ttu-id="80a09-111">예를 들어, `<TargetFramework>netcoreapp2.0</TargetFramework>`를 `<TargetFramework>netcoreapp2.1</TargetFramework>`로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-111">For example, change `<TargetFramework>netcoreapp2.0</TargetFramework>` to `<TargetFramework>netcoreapp2.1</TargetFramework>`.</span></span>
+  <span data-ttu-id="84566-111">예를 들어, `<TargetFramework>netcoreapp2.0</TargetFramework>`를 `<TargetFramework>netcoreapp2.1</TargetFramework>`로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="84566-111">For example, change `<TargetFramework>netcoreapp2.0</TargetFramework>` to `<TargetFramework>netcoreapp2.1</TargetFramework>`.</span></span>
 
-* <span data-ttu-id="80a09-112">.NET Core 2.1 SDK(v 2.1.300 이상)에 번들로 제공되는 도구의 `<DotNetCliToolReference>` 참조를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-112">Remove `<DotNetCliToolReference>` references for tools that are bundled in the .NET Core 2.1 SDK (v 2.1.300 or later).</span></span> <span data-ttu-id="80a09-113">이러한 참조에는 다음이 포함됩니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-113">These references include:</span></span>
+* <span data-ttu-id="84566-112">.NET Core 2.1 SDK(v 2.1.300 이상)에 번들로 제공되는 도구의 `<DotNetCliToolReference>` 참조를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="84566-112">Remove `<DotNetCliToolReference>` references for tools that are bundled in the .NET Core 2.1 SDK (v 2.1.300 or later).</span></span> <span data-ttu-id="84566-113">이러한 참조에는 다음이 포함됩니다.</span><span class="sxs-lookup"><span data-stu-id="84566-113">These references include:</span></span>
 
-  * <span data-ttu-id="80a09-114">[dotnet-watch](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-watch/README.md)(Microsoft.DotNet.Watcher.Tools)</span><span class="sxs-lookup"><span data-stu-id="80a09-114">[dotnet-watch](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-watch/README.md) (Microsoft.DotNet.Watcher.Tools)</span></span>
-  * <span data-ttu-id="80a09-115">[dotnet-user-secrets](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-user-secrets/README.md)(Microsoft.Extensions.SecretManager.Tools)</span><span class="sxs-lookup"><span data-stu-id="80a09-115">[dotnet-user-secrets](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-user-secrets/README.md) (Microsoft.Extensions.SecretManager.Tools)</span></span>
-  * <span data-ttu-id="80a09-116">[dotnet-sql-cache](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-sql-cache/README.md)(Microsoft.Extensions.Caching.SqlConfig.Tools)</span><span class="sxs-lookup"><span data-stu-id="80a09-116">[dotnet-sql-cache](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-sql-cache/README.md) (Microsoft.Extensions.Caching.SqlConfig.Tools)</span></span>
-  * <span data-ttu-id="80a09-117">[dotnet-ef](/ef/core/miscellaneous/cli/dotnet)(Microsoft.EntityFrameworkCore.Tools.DotNet)</span><span class="sxs-lookup"><span data-stu-id="80a09-117">[dotnet-ef](/ef/core/miscellaneous/cli/dotnet) (Microsoft.EntityFrameworkCore.Tools.DotNet)</span></span>
+  * <span data-ttu-id="84566-114">[dotnet-watch](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-watch/README.md)(Microsoft.DotNet.Watcher.Tools)</span><span class="sxs-lookup"><span data-stu-id="84566-114">[dotnet-watch](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-watch/README.md) (Microsoft.DotNet.Watcher.Tools)</span></span>
+  * <span data-ttu-id="84566-115">[dotnet-user-secrets](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-user-secrets/README.md)(Microsoft.Extensions.SecretManager.Tools)</span><span class="sxs-lookup"><span data-stu-id="84566-115">[dotnet-user-secrets](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-user-secrets/README.md) (Microsoft.Extensions.SecretManager.Tools)</span></span>
+  * <span data-ttu-id="84566-116">[dotnet-sql-cache](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-sql-cache/README.md)(Microsoft.Extensions.Caching.SqlConfig.Tools)</span><span class="sxs-lookup"><span data-stu-id="84566-116">[dotnet-sql-cache](https://github.com/aspnet/DotNetTools/blob/master/src/dotnet-sql-cache/README.md) (Microsoft.Extensions.Caching.SqlConfig.Tools)</span></span>
+  * <span data-ttu-id="84566-117">[dotnet-ef](/ef/core/miscellaneous/cli/dotnet)(Microsoft.EntityFrameworkCore.Tools.DotNet)</span><span class="sxs-lookup"><span data-stu-id="84566-117">[dotnet-ef](/ef/core/miscellaneous/cli/dotnet) (Microsoft.EntityFrameworkCore.Tools.DotNet)</span></span>
   
-  <span data-ttu-id="80a09-118">이전 .NET Core SDK 버전에서는 프로젝트 파일에 있는 이러한 도구 중 하나에 대한 참조는 다음 예제와 유사합니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-118">In previous .NET Core SDK versions, the reference to one of these tools in your project file looks similar to the following example:</span></span>
+  <span data-ttu-id="84566-118">이전 .NET Core SDK 버전에서는 프로젝트 파일에 있는 이러한 도구 중 하나에 대한 참조는 다음 예제와 유사합니다.</span><span class="sxs-lookup"><span data-stu-id="84566-118">In previous .NET Core SDK versions, the reference to one of these tools in your project file looks similar to the following example:</span></span>
 
   ```xml
   <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   ```
 
-  <span data-ttu-id="80a09-119">이 항목은 .NET Core SDK에서 더 이상 사용되지 않으므로, 프로젝트에 이러한 번들 도구 중 하나에 대한 참조가 있는 경우 다음과 유사한 경고가 표시됩니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-119">Since this entry isn't used by the .NET Core SDK any longer, you'll see a warning similar to the following if you still have references to one of these bundled tools in your project:</span></span>
+  <span data-ttu-id="84566-119">이 항목은 .NET Core SDK에서 더 이상 사용되지 않으므로, 프로젝트에 이러한 번들 도구 중 하나에 대한 참조가 있는 경우 다음과 유사한 경고가 표시됩니다.</span><span class="sxs-lookup"><span data-stu-id="84566-119">Since this entry isn't used by the .NET Core SDK any longer, you'll see a warning similar to the following if you still have references to one of these bundled tools in your project:</span></span>
   
   `The tool 'Microsoft.EntityFrameworkCore.Tools.DotNet' is now included in the .NET Core SDK. Here is information on resolving this warning.`
   
-  <span data-ttu-id="80a09-120">프로젝트에서 해당 도구에 대한 `<DotNetCliToolReference>` 참조를 제거하면 이 문제가 해결됩니다.</span><span class="sxs-lookup"><span data-stu-id="80a09-120">Removing the `<DotNetCliToolReference>` references for those tools from your project file fixes this issue.</span></span>
+  <span data-ttu-id="84566-120">프로젝트에서 해당 도구에 대한 `<DotNetCliToolReference>` 참조를 제거하면 이 문제가 해결됩니다.</span><span class="sxs-lookup"><span data-stu-id="84566-120">Removing the `<DotNetCliToolReference>` references for those tools from your project file fixes this issue.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="80a09-121">참고 항목</span><span class="sxs-lookup"><span data-stu-id="80a09-121">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="84566-121">참고 항목</span><span class="sxs-lookup"><span data-stu-id="84566-121">See also</span></span>
 
-* [<span data-ttu-id="80a09-122">ASP.NET Core 2.0에서 2.1로 마이그레이션</span><span class="sxs-lookup"><span data-stu-id="80a09-122">Migrate from ASP.NET Core 2.0 to 2.1</span></span>](/aspnet/core/migration/20_21)  
-* [<span data-ttu-id="80a09-123">.NET Core 2.1의 새로운 기능</span><span class="sxs-lookup"><span data-stu-id="80a09-123">What's new in .NET Core 2.1</span></span>](../whats-new/dotnet-core-2-1.md)  
+- [<span data-ttu-id="84566-122">ASP.NET Core 2.0에서 2.1로 마이그레이션</span><span class="sxs-lookup"><span data-stu-id="84566-122">Migrate from ASP.NET Core 2.0 to 2.1</span></span>](/aspnet/core/migration/20_21)
+- [<span data-ttu-id="84566-123">.NET Core 2.1의 새로운 기능</span><span class="sxs-lookup"><span data-stu-id="84566-123">What's new in .NET Core 2.1</span></span>](../whats-new/dotnet-core-2-1.md)
