--- a/docs/csharp/language-reference/compiler-messages/cs0116.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0116.md
@@ -6,22 +6,22 @@ f1_keywords:
 helpviewer_keywords:
 - CS0116
 ms.assetid: 4cb137b5-ec29-4c1a-adde-9f8424cb9496
-ms.openlocfilehash: d830f2101f2833f0e7533b0f11b4b8a5e670a261
-ms.sourcegitcommit: ccd8c36b0d74d99291d41aceb14cf98d74dc9d2b
+ms.openlocfilehash: 3fdc5145c0783824995e4bddb7bfd73a9197e20f
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/10/2018
-ms.locfileid: "53149096"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54559998"
 ---
-# <a name="compiler-error-cs0116"></a><span data-ttu-id="9957e-102">컴파일러 오류 CS0116</span><span class="sxs-lookup"><span data-stu-id="9957e-102">Compiler Error CS0116</span></span>
+# <a name="compiler-error-cs0116"></a><span data-ttu-id="6d3d7-102">컴파일러 오류 CS0116</span><span class="sxs-lookup"><span data-stu-id="6d3d7-102">Compiler Error CS0116</span></span>
 
-<span data-ttu-id="9957e-103">네임스페이스는 필드나 메서드와 같은 멤버를 직접 포함할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="9957e-103">A namespace cannot directly contain members such as fields or methods.</span></span> 
+<span data-ttu-id="6d3d7-103">네임스페이스는 필드나 메서드와 같은 멤버를 직접 포함할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="6d3d7-103">A namespace cannot directly contain members such as fields or methods.</span></span> 
 
-<span data-ttu-id="9957e-104">네임스페이스는 다른 네임스페이스, 구조체 및 클래스를 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9957e-104">A namespace can contain other namespaces, structs, and classes.</span></span> <span data-ttu-id="9957e-105">자세한 내용은 [namespace 키워드](../keywords/namespace.md) 문서를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="9957e-105">For more information, see the [namespace keyword](../keywords/namespace.md) article.</span></span>
+<span data-ttu-id="6d3d7-104">네임스페이스는 다른 네임스페이스, 구조체 및 클래스를 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6d3d7-104">A namespace can contain other namespaces, structs, and classes.</span></span> <span data-ttu-id="6d3d7-105">자세한 내용은 [namespace 키워드](../keywords/namespace.md) 문서를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="6d3d7-105">For more information, see the [namespace keyword](../keywords/namespace.md) article.</span></span>
  
-## <a name="example"></a><span data-ttu-id="9957e-106">예제</span><span class="sxs-lookup"><span data-stu-id="9957e-106">Example</span></span>
+## <a name="example"></a><span data-ttu-id="6d3d7-106">예제</span><span class="sxs-lookup"><span data-stu-id="6d3d7-106">Example</span></span>
 
-<span data-ttu-id="9957e-107">다음 샘플은 Visual Studio에서 코드의 일부에 CS0116 위반으로 플래그를 지정하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="9957e-107">The following sample will cause Visual Studio to flag parts of the code as being in violation of CS0116.</span></span> <span data-ttu-id="9957e-108">이 코드를 빌드하려고 하면 빌드가 실패합니다.</span><span class="sxs-lookup"><span data-stu-id="9957e-108">Attempting to build this code will result in build failure:</span></span>  
+<span data-ttu-id="6d3d7-107">다음 샘플은 Visual Studio에서 코드의 일부에 CS0116 위반으로 플래그를 지정하도록 합니다.</span><span class="sxs-lookup"><span data-stu-id="6d3d7-107">The following sample will cause Visual Studio to flag parts of the code as being in violation of CS0116.</span></span> <span data-ttu-id="6d3d7-108">이 코드를 빌드하려고 하면 빌드가 실패합니다.</span><span class="sxs-lookup"><span data-stu-id="6d3d7-108">Attempting to build this code will result in build failure:</span></span>  
 
 ```csharp
 // CS0116.cs
@@ -64,7 +64,7 @@ namespace x
 }
 ```
 
-<span data-ttu-id="9957e-109">C#에서 메서드 및 변수는 구조체 또는 클래스 내에서 선언하고 정의해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9957e-109">Note that in C#, methods and variables must be declared and defined within a struct or class.</span></span> <span data-ttu-id="9957e-110">C#의 프로그램 구조에 대한 자세한 내용은 [ C# 프로그램의 일반 구조](../../../csharp/programming-guide/inside-a-program/general-structure-of-a-csharp-program.md) 문서를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="9957e-110">For more information on program structure in C#, see the [General Structure of a C# Program](../../../csharp/programming-guide/inside-a-program/general-structure-of-a-csharp-program.md) article.</span></span> <span data-ttu-id="9957e-111">이 오류를 수정하려면 모든 메서드 및 필드가 구조체 또는 클래스에 포함되도록 코드를 다시 작성합니다.</span><span class="sxs-lookup"><span data-stu-id="9957e-111">To fix this error, rewrite your code such that all methods and fields are contained within either a struct or a class:</span></span>
+<span data-ttu-id="6d3d7-109">C#에서 메서드 및 변수는 구조체 또는 클래스 내에서 선언하고 정의해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6d3d7-109">Note that in C#, methods and variables must be declared and defined within a struct or class.</span></span> <span data-ttu-id="6d3d7-110">C#의 프로그램 구조에 대한 자세한 내용은 [ C# 프로그램의 일반 구조](../../../csharp/programming-guide/inside-a-program/general-structure-of-a-csharp-program.md) 문서를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="6d3d7-110">For more information on program structure in C#, see the [General Structure of a C# Program](../../../csharp/programming-guide/inside-a-program/general-structure-of-a-csharp-program.md) article.</span></span> <span data-ttu-id="6d3d7-111">이 오류를 수정하려면 모든 메서드 및 필드가 구조체 또는 클래스에 포함되도록 코드를 다시 작성합니다.</span><span class="sxs-lookup"><span data-stu-id="6d3d7-111">To fix this error, rewrite your code such that all methods and fields are contained within either a struct or a class:</span></span>
 
 ```csharp
 namespace x
@@ -103,8 +103,8 @@ namespace x
 }
 ```
 
-## <a name="see-also"></a><span data-ttu-id="9957e-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="9957e-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6d3d7-112">참고 항목</span><span class="sxs-lookup"><span data-stu-id="6d3d7-112">See also</span></span>
 
-- [<span data-ttu-id="9957e-113">C# 프로그램의 일반적인 구조</span><span class="sxs-lookup"><span data-stu-id="9957e-113">General Structure of a C# Program</span></span>](../../../csharp/programming-guide/inside-a-program/general-structure-of-a-csharp-program.md)  
-- [<span data-ttu-id="9957e-114">클래스 및 구조체</span><span class="sxs-lookup"><span data-stu-id="9957e-114">Classes and Structs</span></span>](../../../csharp/programming-guide/classes-and-structs/index.md)  
-- [<span data-ttu-id="9957e-115">네임스페이스</span><span class="sxs-lookup"><span data-stu-id="9957e-115">Namespaces</span></span>](../../../csharp/programming-guide/namespaces/index.md)
+- [<span data-ttu-id="6d3d7-113">C# 프로그램의 일반적인 구조</span><span class="sxs-lookup"><span data-stu-id="6d3d7-113">General Structure of a C# Program</span></span>](../../../csharp/programming-guide/inside-a-program/general-structure-of-a-csharp-program.md)
+- [<span data-ttu-id="6d3d7-114">클래스 및 구조체</span><span class="sxs-lookup"><span data-stu-id="6d3d7-114">Classes and Structs</span></span>](../../../csharp/programming-guide/classes-and-structs/index.md)
+- [<span data-ttu-id="6d3d7-115">네임스페이스</span><span class="sxs-lookup"><span data-stu-id="6d3d7-115">Namespaces</span></span>](../../../csharp/programming-guide/namespaces/index.md)
