--- a/docs/csharp/language-reference/compiler-messages/cs0702.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0702.md
@@ -6,20 +6,20 @@ f1_keywords:
 helpviewer_keywords:
 - CS0702
 ms.assetid: 55952b5b-66a6-4c53-ac53-2e90a363c335
-ms.openlocfilehash: f7ee4083273cf522e7b9ea51ce689df196f9e6a3
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: ae1a0069097d6da36c8a098be819975749382ee2
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43511220"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54738656"
 ---
-# <a name="compiler-error-cs0702"></a><span data-ttu-id="10834-102">컴파일러 오류 CS0702</span><span class="sxs-lookup"><span data-stu-id="10834-102">Compiler error CS0702</span></span>
-<span data-ttu-id="10834-103">제약 조건은 ‘identifier’ 특수 클래스가 될 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="10834-103">Constraint cannot be special class 'identifier'</span></span>  
+# <a name="compiler-error-cs0702"></a><span data-ttu-id="1e8ec-102">컴파일러 오류 CS0702</span><span class="sxs-lookup"><span data-stu-id="1e8ec-102">Compiler error CS0702</span></span>
+<span data-ttu-id="1e8ec-103">제약 조건은 ‘identifier’ 특수 클래스가 될 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="1e8ec-103">Constraint cannot be special class 'identifier'</span></span>  
   
- <span data-ttu-id="10834-104"><xref:System.Object>, <xref:System.Array> 또는 <xref:System.ValueType> 형식은 제약 조건으로 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="10834-104">The following types may not be used as constraints:  <xref:System.Object>, <xref:System.Array>, or <xref:System.ValueType>.</span></span>  
+ <span data-ttu-id="1e8ec-104"><xref:System.Object>, <xref:System.Array> 또는 <xref:System.ValueType> 형식은 제약 조건으로 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="1e8ec-104">The following types may not be used as constraints:  <xref:System.Object>, <xref:System.Array>, or <xref:System.ValueType>.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="10834-105">예</span><span class="sxs-lookup"><span data-stu-id="10834-105">Example</span></span>  
- <span data-ttu-id="10834-106">다음 샘플에서는 CS0702를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="10834-106">The following sample generates CS0702:</span></span>  
+## <a name="example"></a><span data-ttu-id="1e8ec-105">예제</span><span class="sxs-lookup"><span data-stu-id="1e8ec-105">Example</span></span>  
+ <span data-ttu-id="1e8ec-106">다음 샘플에서는 CS0702를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="1e8ec-106">The following sample generates CS0702:</span></span>  
   
 ```csharp  
 // CS0702.cs  
@@ -28,6 +28,6 @@ class C<T> where T : System.Array  // CS0702
 }  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="10834-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="10834-107">See also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="1e8ec-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="1e8ec-107">See also</span></span>
 
-- [<span data-ttu-id="10834-108">형식 매개 변수에 대한 제약 조건</span><span class="sxs-lookup"><span data-stu-id="10834-108">Constraints on Type Parameters</span></span>](../../programming-guide/generics/constraints-on-type-parameters.md)
+- [<span data-ttu-id="1e8ec-108">형식 매개 변수에 대한 제약 조건</span><span class="sxs-lookup"><span data-stu-id="1e8ec-108">Constraints on Type Parameters</span></span>](../../programming-guide/generics/constraints-on-type-parameters.md)
