--- a/docs/csharp/language-reference/compiler-messages/cs1721.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1721.md
@@ -6,20 +6,20 @@ f1_keywords:
 helpviewer_keywords:
 - CS1721
 ms.assetid: f02dc9b1-8e38-4562-b013-4d752ad79061
-ms.openlocfilehash: d4f7f880e96af44acf20933b0d36667dab7009a0
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 7225a037c06bb77a6eeaf8859fd9f0575e61f9af
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43518038"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54637179"
 ---
-# <a name="compiler-error-cs1721"></a><span data-ttu-id="16c44-102">컴파일러 오류 CS1721</span><span class="sxs-lookup"><span data-stu-id="16c44-102">Compiler Error CS1721</span></span>
-<span data-ttu-id="16c44-103">‘class’ 클래스는 여러 개의 기본 클래스(‘class_1’ 및 ‘class_2’)를 가질 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="16c44-103">Class 'class' cannot have multiple base classes: 'class_1' and 'class_2'</span></span>  
+# <a name="compiler-error-cs1721"></a><span data-ttu-id="e0e62-102">컴파일러 오류 CS1721</span><span class="sxs-lookup"><span data-stu-id="e0e62-102">Compiler Error CS1721</span></span>
+<span data-ttu-id="e0e62-103">‘class’ 클래스는 여러 개의 기본 클래스(‘class_1’ 및 ‘class_2’)를 가질 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="e0e62-103">Class 'class' cannot have multiple base classes: 'class_1' and 'class_2'</span></span>  
   
- <span data-ttu-id="16c44-104">이 오류 메시지가 표시되는 가장 일반적인 원인은 다중 상속을 사용하려고 시도하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="16c44-104">The most common cause of this error message is attempting to use multiple inheritance.</span></span> <span data-ttu-id="16c44-105">C#에서 하나의 클래스는 하나의 클래스에서만 직접 상속할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="16c44-105">A class in C# may only inherit directly from one class.</span></span> <span data-ttu-id="16c44-106">그러나 하나의 클래스는 원하는 수만큼의 인터페이스를 구현할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="16c44-106">However, a class can implement any number of interfaces.</span></span>  
+ <span data-ttu-id="e0e62-104">이 오류 메시지가 표시되는 가장 일반적인 원인은 다중 상속을 사용하려고 시도하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="e0e62-104">The most common cause of this error message is attempting to use multiple inheritance.</span></span> <span data-ttu-id="e0e62-105">C#에서 하나의 클래스는 하나의 클래스에서만 직접 상속할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="e0e62-105">A class in C# may only inherit directly from one class.</span></span> <span data-ttu-id="e0e62-106">그러나 하나의 클래스는 원하는 수만큼의 인터페이스를 구현할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="e0e62-106">However, a class can implement any number of interfaces.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="16c44-107">예</span><span class="sxs-lookup"><span data-stu-id="16c44-107">Example</span></span>  
- <span data-ttu-id="16c44-108">다음 예제는 CS1721 오류가 발생하는 한 가지 경우와 오류를 방지할 수 있는 두 가지 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="16c44-108">The following example shows one way in which CS1721 is generated, and then shows two possible ways to avoid the error.</span></span>  
+## <a name="example"></a><span data-ttu-id="e0e62-107">예제</span><span class="sxs-lookup"><span data-stu-id="e0e62-107">Example</span></span>  
+ <span data-ttu-id="e0e62-108">다음 예제는 CS1721 오류가 발생하는 한 가지 경우와 오류를 방지할 수 있는 두 가지 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="e0e62-108">The following example shows one way in which CS1721 is generated, and then shows two possible ways to avoid the error.</span></span>  
   
 ```csharp  
 // CS1721.cs  
@@ -38,7 +38,7 @@ public interface B {}
 public class C : A, B {}  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="16c44-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="16c44-109">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="e0e62-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="e0e62-109">See also</span></span>
 
-- [<span data-ttu-id="16c44-110">다형성</span><span class="sxs-lookup"><span data-stu-id="16c44-110">Polymorphism</span></span>](../../../csharp/programming-guide/classes-and-structs/polymorphism.md)  
-- [<span data-ttu-id="16c44-111">인터페이스</span><span class="sxs-lookup"><span data-stu-id="16c44-111">Interfaces</span></span>](../../../csharp/programming-guide/interfaces/index.md)
+- [<span data-ttu-id="e0e62-110">다형성</span><span class="sxs-lookup"><span data-stu-id="e0e62-110">Polymorphism</span></span>](../../../csharp/programming-guide/classes-and-structs/polymorphism.md)
+- [<span data-ttu-id="e0e62-111">인터페이스</span><span class="sxs-lookup"><span data-stu-id="e0e62-111">Interfaces</span></span>](../../../csharp/programming-guide/interfaces/index.md)
