--- a/docs/csharp/language-reference/compiler-messages/cs1921.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1921.md
@@ -6,22 +6,22 @@ f1_keywords:
 helpviewer_keywords:
 - CS1921
 ms.assetid: 0e8326dc-4ad9-49b6-948c-d37f10e6abaf
-ms.openlocfilehash: 39ad4a6a647c61cf1319968247e57a997f5f0adf
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: bdc804ea017573eeaeaff2a777a4ade9f732e390
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43510592"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54738682"
 ---
-# <a name="compiler-error-cs1921"></a><span data-ttu-id="3e387-102">컴파일러 오류 CS1921</span><span class="sxs-lookup"><span data-stu-id="3e387-102">Compiler Error CS1921</span></span>
+# <a name="compiler-error-cs1921"></a><span data-ttu-id="4412c-102">컴파일러 오류 CS1921</span><span class="sxs-lookup"><span data-stu-id="4412c-102">Compiler Error CS1921</span></span>
 
-<span data-ttu-id="3e387-103">‘method’에 가장 일치하는 오버로드된 메서드에 이니셜라이저 요소의 잘못된 시그니처가 있습니다.</span><span class="sxs-lookup"><span data-stu-id="3e387-103">The best overloaded method match for 'method' has wrong signature for the initializer element.</span></span> <span data-ttu-id="3e387-104">초기화 가능한 Add는 액세스 가능한 인스턴스 메서드여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="3e387-104">The initializable Add must be an accessible instance method.</span></span>  
+<span data-ttu-id="4412c-103">‘method’에 가장 일치하는 오버로드된 메서드에 이니셜라이저 요소의 잘못된 시그니처가 있습니다.</span><span class="sxs-lookup"><span data-stu-id="4412c-103">The best overloaded method match for 'method' has wrong signature for the initializer element.</span></span> <span data-ttu-id="4412c-104">초기화 가능한 Add는 액세스 가능한 인스턴스 메서드여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="4412c-104">The initializable Add must be an accessible instance method.</span></span>  
   
- <span data-ttu-id="3e387-105">이 오류는 공용 비정적 `Add` 메서드가 없는 클래스와 함께 컬렉션 이니셜라이저를 사용하려고 할 때 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="3e387-105">This error is generated when you try to use a collection initializer with a class that has no public non-static `Add` method.</span></span> <span data-ttu-id="3e387-106">보호 수준(`private`, `protected`, `internal`) 때문에 `Add` 메서드에 액세스할 수 없는 경우에는 CS0122 오류가 발생합니다. 따라서 이 오류는 메서드가 `static`으로 정의되어 있음을 의미할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="3e387-106">If the `Add` method is not accessible because of its protection level (`private`, `protected`, `internal`) then you will get CS0122, so that this error probably means that the method is defined as `static`.</span></span>  
+ <span data-ttu-id="4412c-105">이 오류는 공용 비정적 `Add` 메서드가 없는 클래스와 함께 컬렉션 이니셜라이저를 사용하려고 할 때 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="4412c-105">This error is generated when you try to use a collection initializer with a class that has no public non-static `Add` method.</span></span> <span data-ttu-id="4412c-106">보호 수준(`private`, `protected`, `internal`) 때문에 `Add` 메서드에 액세스할 수 없는 경우에는 CS0122 오류가 발생합니다. 따라서 이 오류는 메서드가 `static`으로 정의되어 있음을 의미할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="4412c-106">If the `Add` method is not accessible because of its protection level (`private`, `protected`, `internal`) then you will get CS0122, so that this error probably means that the method is defined as `static`.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="3e387-107">예</span><span class="sxs-lookup"><span data-stu-id="3e387-107">Example</span></span>
+## <a name="example"></a><span data-ttu-id="4412c-107">예제</span><span class="sxs-lookup"><span data-stu-id="4412c-107">Example</span></span>
 
- <span data-ttu-id="3e387-108">다음 예제에서는 CS1921 오류가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="3e387-108">The following example generates CS1921:</span></span>  
+ <span data-ttu-id="4412c-108">다음 예제에서는 CS1921 오류가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="4412c-108">The following example generates CS1921:</span></span>  
 
 ```csharp
 // cs1921.cs  
@@ -41,6 +41,6 @@ public class Test
 }  
 ```
 
-## <a name="see-also"></a><span data-ttu-id="3e387-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="3e387-109">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="4412c-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="4412c-109">See also</span></span>
 
-- [<span data-ttu-id="3e387-110">개체 이니셜라이저 및 컬렉션 이니셜라이저</span><span class="sxs-lookup"><span data-stu-id="3e387-110">Object and Collection Initializers</span></span>](../../../csharp/programming-guide/classes-and-structs/object-and-collection-initializers.md)
+- [<span data-ttu-id="4412c-110">개체 이니셜라이저 및 컬렉션 이니셜라이저</span><span class="sxs-lookup"><span data-stu-id="4412c-110">Object and Collection Initializers</span></span>](../../../csharp/programming-guide/classes-and-structs/object-and-collection-initializers.md)
