--- a/docs/csharp/language-reference/compiler-messages/cs7003.md
+++ b/docs/csharp/language-reference/compiler-messages/cs7003.md
@@ -6,26 +6,26 @@ f1_keywords:
 helpviewer_keywords:
 - CS7003
 author: sputier
-ms.openlocfilehash: 3a045cc822cc6b4b6e7023ebb843e6f8a455185e
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 42bb9d79ca24ed02363f0e09bdbc3ceff4890aa3
+ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43517703"
+ms.lasthandoff: 01/23/2019
+ms.locfileid: "54620567"
 ---
-# <a name="compiler-error-cs7003"></a><span data-ttu-id="3c19b-102">컴파일러 오류 CS7003</span><span class="sxs-lookup"><span data-stu-id="3c19b-102">Compiler Error CS7003</span></span>
+# <a name="compiler-error-cs7003"></a><span data-ttu-id="3c069-102">컴파일러 오류 CS7003</span><span class="sxs-lookup"><span data-stu-id="3c069-102">Compiler Error CS7003</span></span>
 
-<span data-ttu-id="3c19b-103">바인딩되지 않은 제네릭 이름의 예기치 못한 사용</span><span class="sxs-lookup"><span data-stu-id="3c19b-103">Unexpected use of an unbound generic name</span></span>
+<span data-ttu-id="3c069-103">바인딩되지 않은 제네릭 이름의 예기치 못한 사용</span><span class="sxs-lookup"><span data-stu-id="3c069-103">Unexpected use of an unbound generic name</span></span>
 
-<span data-ttu-id="3c19b-104">이 오류는 꺾쇠 괄호 사이에 아무런 제네릭 매개 변수 형식 이름을 전달하지 않은 채 하나의 매개 변수 형식이 있어야 하는 제네릭 형식을 사용하는 경우 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="3c19b-104">This error occurs if you use a generic type needing one parameter type without passing any generic parameter type name between the angle brackets.</span></span> <span data-ttu-id="3c19b-105">이 사용은 변수 선언 또는 개체 인스턴스화일 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="3c19b-105">This use may be a variable declaration, or an object instanciation.</span></span>
+<span data-ttu-id="3c069-104">이 오류는 꺾쇠 괄호 사이에 아무런 제네릭 매개 변수 형식 이름을 전달하지 않은 채 하나의 매개 변수 형식이 있어야 하는 제네릭 형식을 사용하는 경우 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="3c069-104">This error occurs if you use a generic type needing one parameter type without passing any generic parameter type name between the angle brackets.</span></span> <span data-ttu-id="3c069-105">이 사용은 변수 선언 또는 개체 인스턴스화일 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="3c069-105">This use may be a variable declaration, or an object instanciation.</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="3c19b-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3c19b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3c069-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3c069-106">To correct this error</span></span>  
 
-<span data-ttu-id="3c19b-107">제네릭 형식을 사용할 때 꺾쇠 괄호에 하나의 매개 변수 형식 이름을 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="3c19b-107">Provide one parameter type name in angle brackets when using a generic type.</span></span>
+<span data-ttu-id="3c069-107">제네릭 형식을 사용할 때 꺾쇠 괄호에 하나의 매개 변수 형식 이름을 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="3c069-107">Provide one parameter type name in angle brackets when using a generic type.</span></span>
 
-## <a name="example"></a><span data-ttu-id="3c19b-108">예</span><span class="sxs-lookup"><span data-stu-id="3c19b-108">Example</span></span>
+## <a name="example"></a><span data-ttu-id="3c069-108">예제</span><span class="sxs-lookup"><span data-stu-id="3c069-108">Example</span></span>
 
-<span data-ttu-id="3c19b-109">다음 예제에서는 CS7003을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="3c19b-109">The following example generates CS7003:</span></span>
+<span data-ttu-id="3c069-109">다음 예제에서는 CS7003을 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="3c069-109">The following example generates CS7003:</span></span>
 
 ```csharp
 // CS7003.cs  
@@ -42,6 +42,6 @@ ms.locfileid: "43517703"
     public class MyGenericClass<T> { }
 ```
 
-## <a name="see-also"></a><span data-ttu-id="3c19b-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="3c19b-110">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="3c069-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="3c069-110">See also</span></span>
 
-- [<span data-ttu-id="3c19b-111">제네릭</span><span class="sxs-lookup"><span data-stu-id="3c19b-111">Generics</span></span>](../../../csharp/programming-guide/generics/generic-type-parameters.md)
+- [<span data-ttu-id="3c069-111">제네릭</span><span class="sxs-lookup"><span data-stu-id="3c069-111">Generics</span></span>](../../../csharp/programming-guide/generics/generic-type-parameters.md)
